--- a/src/style.css
+++ b/src/style.css
@@ -73,13 +73,13 @@ body {
   }
 
   #route-list {
-    width: calc(100% - 2.5rem);
+    box-sizing: border-box;
+    left: 1.25rem; /* inset-x-5 */
+    right: 1.25rem; /* inset-x-5 */
+    top: 50%;
     max-height: calc(100vh - 12rem);
     overflow-y: auto;
-    left: 50%;
-    top: 50%;
-    bottom: auto;
-    transform: translate(-50%, -50%);
+    transform: translateY(-50%);
     padding: 0.75rem; /* p-3 */
   }
 
